--- a/details.html
+++ b/details.html
@@ -186,14 +186,326 @@
       </section>
 
       <!--=============== DETAILS TAB ===============-->
-      <section class="details__tab"></section>
+      <section class="details__tab container">
+        <div class="detail-tabs">
+          <span class="detail-tab active-tab" data-target="#info">Additional Info</span>
+          <span class="detail-tab" data-target="#reviews">Reviews(3)</span>
+        </div>
+        <div class="detail-tabs-content">
+          <div class="details-tab-content active-tab" id="info">
+            <table class="info-table">
+              <tr>
+                <th>Stand up</th>
+                <td>35"L x 24"W x 37-45"H(Front to back wheel)</td>
+              </tr>
+              <tr>
+                <th>Folded(w/o wheels)</th>
+                <td>32.5"L x 18.5"W x 16.5"H</td>
+              </tr>
+              <tr>
+                <th>Folded(w wheels)</th>
+                <td>32.5"L x 24"W x 18.5"H</td>
+              </tr>
+              <tr>
+                <th>Door pass through</th>
+                <td>24</td>
+              </tr>
+              <tr>
+                <th>Frame</th>
+                <td>Alumnium</td>
+              </tr>
+              <tr>
+                <th>Weight (w/o wheels)</th>
+                <td>20 LBS</td>
+              </tr>
+              <tr>
+                <th>Weight Capacity</th>
+                <td>60 LBS</td>
+              </tr>
+              <tr>
+                <th>Width</th>
+                <td>24</td>
+              </tr>
+              <tr>
+                <th>Handle Height (Ground to handle)</th>
+                <td>37-45</td>
+              </tr>
+              <tr>
+                <th>Wheels</th>
+                <td>12* air / wide track slick tread</td>
+              </tr>
+              <tr>
+                <th>Seat back height</th>
+                <td>21.5</td>
+              </tr>
+              <tr>
+                <th>Head room (insid canopy)</th>
+                <td>25</td>
+              </tr>
+              <tr>
+                <th>Color</th>
+                <td>Black, Blue, Red, White</td>
+              </tr>
+              <tr>
+                <th>Size</th>
+                <td>M, S</td>
+              </tr>
+            </table>
+          </div>
+          <div class="details-tab-content" content id="reviews">
+            <div class="reviews-container grid">
+              <div class="review-single">
+                <div>
+                  <img src="assets/img/avatar-1.jpg" alt="" class="review-img">
+                  <h4 class="review-title">Jacky Chan</h4>
+                </div>
+                <div class="review-data">
+                  <div class="review-rating">
+                    <i class="fi fi-rs-star"></i>
+                    <i class="fi fi-rs-star"></i>
+                    <i class="fi fi-rs-star"></i>
+                    <i class="fi fi-rs-star"></i>
+                    <i class="fi fi-rs-star"></i>
+                  </div>
+                  <p class="review-description">
+                    Thank you, Very fast shopping from Poland only 3 days.
+                  </p>
+                  <span class="review-date">Desember 4, 2020 at 4:43 pm</span>
+                </div>
+              </div>
+              <div class="review-single">
+                <div>
+                  <img src="assets/img/avatar-2.jpg" alt="" class="review-img">
+                  <h4 class="review-title">Jacky Chan</h4>
+                </div>
+                <div class="review-data">
+                  <div class="review-rating">
+                    <i class="fi fi-rs-star"></i>
+                    <i class="fi fi-rs-star"></i>
+                    <i class="fi fi-rs-star"></i>
+                    <i class="fi fi-rs-star"></i>
+                    <i class="fi fi-rs-star"></i>
+                  </div>
+                  <p class="review-description">
+                    Great low price and works well.
+                  </p>
+                  <span class="review-date">Desember 4, 2020 at 4:43 pm</span>
+                </div>
+              </div>
+              <div class="review-single">
+                <div>
+                  <img src="assets/img/avatar-3.jpg" alt="" class="review-img">
+                  <h4 class="review-title">Jacky Chan</h4>
+                </div>
+                <div class="review-data">
+                  <div class="review-rating">
+                    <i class="fi fi-rs-star"></i>
+                    <i class="fi fi-rs-star"></i>
+                    <i class="fi fi-rs-star"></i>
+                    <i class="fi fi-rs-star"></i>
+                    <i class="fi fi-rs-star"></i>
+                  </div>
+                  <p class="review-description">
+                    Authentic and beautyful, Love this way more then ever expected They are great earphones.
+                  </p>
+                  <span class="review-date">Desember 4, 2020 at 4:43 pm</span>
+                </div>
+              </div>
+            </div>
+            <div class="review-form">
+              <h4 class="review-form-title">Add a review</h4>
+              <div class="rate-product">
+                <i class="fi fi-rs-star"></i>
+                <i class="fi fi-rs-star"></i>
+                <i class="fi fi-rs-star"></i>
+                <i class="fi fi-rs-star"></i>
+                <i class="fi fi-rs-star"></i>
+              </div>
+              <form action="" class="form-grid">
+                <textarea class="form-input textarea" placeholder="Write a Comment..."></textarea>
+                <div class="form-group grid">
+                  <input type="text" placeholder="Name" class="form-input">
+                  <input type="email" placeholder="Email" class="form-input">
+                </div>
+                <div class="form-btn">
+                  <button type="submit" class="btn">Submit Review</button>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </section>
 
       <!--=============== PRODUCTS ===============-->
-      <section class="products"></section>
+      <section class="products container section-lg">
+        <h3 class="section-title"><span>Related</span> Products</h3>
+        <div class="products-container grid">
+          <div class="product-item">
+            <div class="product-banner">
+              <a href="details.html" class="product-images">
+                <img src="assets/img/product-1-1.jpg" alt="" class="product-img default">
+                <img src="assets/img/product-1-2.jpg" alt="" class="product-img hover">
+              </a>
+              <div class="product-actions">
+                <a href="#" class="action-btn" aria-label="Quick View">
+                  <i class="fi fi-rs-eye"></i>
+                </a>
+                <a href="#" class="action-btn" aria-label="Add To Wishlist">
+                  <i class="fi fi-rs-heart"></i>
+                </a>
+                <a href="#" class="action-btn" aria-label="Compare">
+                  <i class="fi fi-rs-shuffle"></i>
+                </a>
+              </div>
+              <div class="product-badge light-pink">Hot</div>
+            </div>
+            <div class="product-content">
+              <span class="product-category">Clothing</span>
+              <a href="details.html">
+                <h3 class="product-title">Colorful Pattern Shirts</h3>
+              </a>
+              <div class="product-rating">
+                <i class="fi fi-rs-star"></i>
+                <i class="fi fi-rs-star"></i>
+                <i class="fi fi-rs-star"></i>
+                <i class="fi fi-rs-star"></i>
+                <i class="fi fi-rs-star"></i>
+              </div>
+              <div class="product-price flex">
+                <span class="new-price">$238.85</span>
+                <span class="old-price">$245.85</span>
+              </div>
+              <a href="#" class="action-btn cart-btn" aria-label="Add To Cart">
+                <i class="fi fi-rs-shopping-bag-add"></i>
+              </a>
+            </div>
+          </div>
+          <div class="product-item">
+            <div class="product-banner">
+              <a href="details.html" class="product-images">
+                <img src="assets/img/product-2-1.jpg" alt="" class="product-img default">
+                <img src="assets/img/product-2-2.jpg" alt="" class="product-img hover">
+              </a>
+              <div class="product-actions">
+                <a href="#" class="action-btn" aria-label="Quick View">
+                  <i class="fi fi-rs-eye"></i>
+                </a>
+                <a href="#" class="action-btn" aria-label="Add To Wishlist">
+                  <i class="fi fi-rs-heart"></i>
+                </a>
+                <a href="#" class="action-btn" aria-label="Compare">
+                  <i class="fi fi-rs-shuffle"></i>
+                </a>
+              </div>
+              <div class="product-badge light-green">Hot</div>
+            </div>
+            <div class="product-content">
+              <span class="product-category">Clothing</span>
+              <a href="details.html">
+                <h3 class="product-title">Colorful Pattern Shirts</h3>
+              </a>
+              <div class="product-rating">
+                <i class="fi fi-rs-star"></i>
+                <i class="fi fi-rs-star"></i>
+                <i class="fi fi-rs-star"></i>
+                <i class="fi fi-rs-star"></i>
+                <i class="fi fi-rs-star"></i>
+              </div>
+              <div class="product-price flex">
+                <span class="new-price">$238.85</span>
+                <span class="old-price">$245.85</span>
+              </div>
+              <a href="#" class="action-btn cart-btn" aria-label="Add To Cart">
+                <i class="fi fi-rs-shopping-bag-add"></i>
+              </a>
+            </div>
+          </div>
+          <div class="product-item">
+            <div class="product-banner">
+              <a href="details.html" class="product-images">
+                <img src="assets/img/product-3-1.jpg" alt="" class="product-img default">
+                <img src="assets/img/product-3-2.jpg" alt="" class="product-img hover">
+              </a>
+              <div class="product-actions">
+                <a href="#" class="action-btn" aria-label="Quick View">
+                  <i class="fi fi-rs-eye"></i>
+                </a>
+                <a href="#" class="action-btn" aria-label="Add To Wishlist">
+                  <i class="fi fi-rs-heart"></i>
+                </a>
+                <a href="#" class="action-btn" aria-label="Compare">
+                  <i class="fi fi-rs-shuffle"></i>
+                </a>
+              </div>
+              <div class="product-badge light-orange">Hot</div>
+            </div>
+            <div class="product-content">
+              <span class="product-category">Clothing</span>
+              <a href="details.html">
+                <h3 class="product-title">Colorful Pattern Shirts</h3>
+              </a>
+              <div class="product-rating">
+                <i class="fi fi-rs-star"></i>
+                <i class="fi fi-rs-star"></i>
+                <i class="fi fi-rs-star"></i>
+                <i class="fi fi-rs-star"></i>
+                <i class="fi fi-rs-star"></i>
+              </div>
+              <div class="product-price flex">
+                <span class="new-price">$238.85</span>
+                <span class="old-price">$245.85</span>
+              </div>
+              <a href="#" class="action-btn cart-btn" aria-label="Add To Cart">
+                <i class="fi fi-rs-shopping-bag-add"></i>
+              </a>
+            </div>
+          </div>
+          <div class="product-item">
+            <div class="product-banner">
+              <a href="details.html" class="product-images">
+                <img src="assets/img/product-4-1.jpg" alt="" class="product-img default">
+                <img src="assets/img/product-4-2.jpg" alt="" class="product-img hover">
+              </a>
+              <div class="product-actions">
+                <a href="#" class="action-btn" aria-label="Quick View">
+                  <i class="fi fi-rs-eye"></i>
+                </a>
+                <a href="#" class="action-btn" aria-label="Add To Wishlist">
+                  <i class="fi fi-rs-heart"></i>
+                </a>
+                <a href="#" class="action-btn" aria-label="Compare">
+                  <i class="fi fi-rs-shuffle"></i>
+                </a>
+              </div>
+              <div class="product-badge light-blue">Hot</div>
+            </div>
+            <div class="product-content">
+              <span class="product-category">Clothing</span>
+              <a href="details.html">
+                <h3 class="product-title">Colorful Pattern Shirts</h3>
+              </a>
+              <div class="product-rating">
+                <i class="fi fi-rs-star"></i>
+                <i class="fi fi-rs-star"></i>
+                <i class="fi fi-rs-star"></i>
+                <i class="fi fi-rs-star"></i>
+                <i class="fi fi-rs-star"></i>
+              </div>
+              <div class="product-price flex">
+                <span class="new-price">$238.85</span>
+                <span class="old-price">$245.85</span>
+              </div>
+              <a href="#" class="action-btn cart-btn" aria-label="Add To Cart">
+                <i class="fi fi-rs-shopping-bag-add"></i>
+              </a>
+            </div>
+          </div>
+        </div>
+      </section>
 
       <!--=============== NEWSLETTER ===============-->
       <section class="newsletter section home-newsletter">
-        <div class="newsletter-container conteiner grid">
+        <div class="newsletter-container container grid">
           <h3 class="newsletter-title flex">
             <img src="assets/img/icon-email.svg" alt="" class="newsletter-icon">
             Sign up to Newsletter
