--- a/details.html
+++ b/details.html
@@ -504,7 +504,7 @@
       </section>
 
       <!--=============== NEWSLETTER ===============-->
-      <section class="newsletter section home-newsletter">
+      <section class="newsletter section">
         <div class="newsletter-container container grid">
           <h3 class="newsletter-title flex">
             <img src="assets/img/icon-email.svg" alt="" class="newsletter-icon">
