--- a/index.html
+++ b/index.html
@@ -38,6 +38,14 @@
         <img src="assets/img/logo.svg" alt="Logo" class="nav-logo-img">
       </a>
       <div class="nav-menu" id="nav_menu">
+        <div class="nav-menu-top">
+          <a href="index.html" class="nav-menu-logo">
+            <img src="assets/img/logo.svg" alt="">
+          </a>
+          <div class="nav-close" id="nav_close">
+            <i class="fi fi-rs-cross-small"></i>
+          </div>
+        </div>
         <ul class="nav-list">
           <li class="nav-item">
             <a href="index.html" class="nav-link active-link">Home</a>
@@ -74,6 +82,10 @@
           <img src="assets/img/icon-cart.svg" alt="Cart">
           <span class="count">3</span>
         </a>
+
+        <div class="header-action-top menu-toggle" id="nav_toggle">
+          <img src="assets/img/menu-burger.svg" alt="">
+        </div>
       </div>
     </nav>
   </header>
