--- a/shop.html
+++ b/shop.html
@@ -585,7 +585,7 @@
       </section>
 
       <!--=============== NEWSLETTER ===============-->
-      <section class="newsletter section home-newsletter">
+      <section class="newsletter section">
         <div class="newsletter-container conteiner grid">
           <h3 class="newsletter-title flex">
             <img src="assets/img/icon-email.svg" alt="" class="newsletter-icon">
