--- a/index.html
+++ b/index.html
@@ -113,36 +113,44 @@
       <div class="categories-container swiper">
         <div class="swiper-wrapper">
           <a href="shop.html" class="category-item swiper-slide">
-            <img src="assets/img/category-1.jpg" alt="" class="category-img">
-            <h3 class="category-title">T-shirts</h3>
+            <img src="assets/img/phone-category.png" alt="" class="category-img">
+            <h3 class="category-title">Phones</h3>
           </a>
           <a href="shop.html" class="category-item swiper-slide">
-            <img src="assets/img/category-2.jpg" alt="" class="category-img">
-            <h3 class="category-title">Bags</h3>
+            <img src="assets/img/chargers-category.webp" alt="" class="category-img">
+            <h3 class="category-title">Chargers</h3>
           </a>
           <a href="shop.html" class="category-item swiper-slide">
-            <img src="assets/img/category-3.jpg" alt="" class="category-img">
-            <h3 class="category-title">Sandal</h3>
+            <img src="assets/img/smartwatches-category.jpg" alt="" class="category-img">
+            <h3 class="category-title">Smart Waatches</h3>
           </a>
           <a href="shop.html" class="category-item swiper-slide">
-            <img src="assets/img/category-4.jpg" alt="" class="category-img">
-            <h3 class="category-title">Scarf Cap</h3>
+            <img src="assets/img/Laptops-category.jpg" alt="" class="category-img">
+            <h3 class="category-title">Laptops</h3>
           </a>
           <a href="shop.html" class="category-item swiper-slide">
-            <img src="assets/img/category-5.jpg" alt="" class="category-img">
-            <h3 class="category-title">Shoes</h3>
+            <img src="assets/img/tablets-category.webp" alt="" class="category-img">
+            <h3 class="category-title">Tablets</h3>
           </a>
           <a href="shop.html" class="category-item swiper-slide">
-            <img src="assets/img/category-6.jpg" alt="" class="category-img">
-            <h3 class="category-title">Pillowcase</h3>
+            <img src="assets/img/desktops-category.webp" alt="" class="category-img">
+            <h3 class="category-title">Desktops</h3>
           </a>
           <a href="shop.html" class="category-item swiper-slide">
-            <img src="assets/img/category-7.jpg" alt="" class="category-img">
-            <h3 class="category-title">Jumpsuit</h3>
+            <img src="assets/img/monitors-category.jpg" alt="" class="category-img">
+            <h3 class="category-title">Monitors</h3>
           </a>
           <a href="shop.html" class="category-item swiper-slide">
-            <img src="assets/img/category-8.jpg" alt="" class="category-img">
-            <h3 class="category-title">Hats</h3>
+            <img src="assets/img/airphones-category.jpeg" alt="" class="category-img">
+            <h3 class="category-title">Airphones</h3>
+          </a>
+          <a href="shop.html" class="category-item swiper-slide">
+            <img src="assets/img/smart home-category.jpg" alt="" class="category-img">
+            <h3 class="category-title">Smart Home</h3>
+          </a>
+          <a href="shop.html" class="category-item swiper-slide">
+            <img src="assets/img/gaming-category.jpg" alt="" class="category-img">
+            <h3 class="category-title">Gaming Consoles</h3>
           </a>
         </div>
         <div class="swiper-button-next">
