--- a/index.html
+++ b/index.html
@@ -112,43 +112,47 @@
       <h3 class="section-title"><span>Popular</span> Categories</h3>
       <div class="categories-container swiper">
         <div class="swiper-wrapper">
-          <a href="shop.html" class="category-item swiper-slide">
+          <a href="shop.html?category=All" class="category-item swiper-slide">
+            <img src="assets/img/logo.jpg" alt="" class="category-img">
+            <h3 class="category-title">All</h3>
+          </a>
+          <a href="shop.html?category=Phones" class="category-item swiper-slide">
             <img src="assets/img/phone-category.png" alt="" class="category-img">
             <h3 class="category-title">Phones</h3>
           </a>
-          <a href="shop.html" class="category-item swiper-slide">
+          <a href="shop.html?category=Chargers" class="category-item swiper-slide">
             <img src="assets/img/chargers-category.webp" alt="" class="category-img">
             <h3 class="category-title">Chargers</h3>
           </a>
-          <a href="shop.html" class="category-item swiper-slide">
+          <a href="shop.html?category=SmartWatches" class="category-item swiper-slide">
             <img src="assets/img/smartwatches-category.jpg" alt="" class="category-img">
-            <h3 class="category-title">Smart Waatches</h3>
+            <h3 class="category-title">Smart Watches</h3>
           </a>
-          <a href="shop.html" class="category-item swiper-slide">
+          <a href="shop.html?category=Laptops" class="category-item swiper-slide">
             <img src="assets/img/Laptops-category.jpg" alt="" class="category-img">
             <h3 class="category-title">Laptops</h3>
           </a>
-          <a href="shop.html" class="category-item swiper-slide">
+          <a href="shop.html?category=Tablets" class="category-item swiper-slide">
             <img src="assets/img/tablets-category.webp" alt="" class="category-img">
             <h3 class="category-title">Tablets</h3>
           </a>
-          <a href="shop.html" class="category-item swiper-slide">
+          <a href="shop.html?category=Desktops" class="category-item swiper-slide">
             <img src="assets/img/desktops-category.webp" alt="" class="category-img">
             <h3 class="category-title">Desktops</h3>
           </a>
-          <a href="shop.html" class="category-item swiper-slide">
+          <a href="shop.html?category=Monitors" class="category-item swiper-slide">
             <img src="assets/img/monitors-category.jpg" alt="" class="category-img">
             <h3 class="category-title">Monitors</h3>
           </a>
-          <a href="shop.html" class="category-item swiper-slide">
+          <a href="shop.html?category=Airphones" class="category-item swiper-slide">
             <img src="assets/img/airphones-category.jpeg" alt="" class="category-img">
             <h3 class="category-title">Airphones</h3>
           </a>
-          <a href="shop.html" class="category-item swiper-slide">
+          <a href="shop.html?category=SmartHome" class="category-item swiper-slide">
             <img src="assets/img/smart home-category.jpg" alt="" class="category-img">
             <h3 class="category-title">Smart Home</h3>
           </a>
-          <a href="shop.html" class="category-item swiper-slide">
+          <a href="shop.html?category=Gaming" class="category-item swiper-slide">
             <img src="assets/img/gaming-category.jpg" alt="" class="category-img">
             <h3 class="category-title">Gaming Consoles</h3>
           </a>
@@ -1845,6 +1849,9 @@
 
   <!--=============== MAIN JS ===============-->
   <script src="assets/js/main.js"></script>
+
+  <!--=============== Product List ===============-->
+  <script src="assets/js/products.js"></script>
 </body>
 
 </html>
