--- a/shop.html
+++ b/shop.html
@@ -87,10 +87,67 @@
         </ul>
       </section>
 
+      <!-- Slider-->
+       <section class="section section-lg container">
+        <div class="categories-container swiper">
+          <div class="swiper-wrapper">
+            <a href="shop.html" class="category-item swiper-slide">
+              <img src="assets/img/logo.jpg" alt="" class="category-img">
+              <h3 class="category-title">All</h3>
+            </a>
+            <a href="shop.html" class="category-item swiper-slide">
+              <img src="assets/img/phone-category.png" alt="" class="category-img">
+              <h3 class="category-title">Phones</h3>
+            </a>
+            <a href="shop.html" class="category-item swiper-slide">
+              <img src="assets/img/chargers-category.webp" alt="" class="category-img">
+              <h3 class="category-title">Chargers</h3>
+            </a>
+            <a href="shop.html" class="category-item swiper-slide">
+              <img src="assets/img/smartwatches-category.jpg" alt="" class="category-img">
+              <h3 class="category-title">Smart Waatches</h3>
+            </a>
+            <a href="shop.html" class="category-item swiper-slide">
+              <img src="assets/img/Laptops-category.jpg" alt="" class="category-img">
+              <h3 class="category-title">Laptops</h3>
+            </a>
+            <a href="shop.html" class="category-item swiper-slide">
+              <img src="assets/img/tablets-category.webp" alt="" class="category-img">
+              <h3 class="category-title">Tablets</h3>
+            </a>
+            <a href="shop.html" class="category-item swiper-slide">
+              <img src="assets/img/desktops-category.webp" alt="" class="category-img">
+              <h3 class="category-title">Desktops</h3>
+            </a>
+            <a href="shop.html" class="category-item swiper-slide">
+              <img src="assets/img/monitors-category.jpg" alt="" class="category-img">
+              <h3 class="category-title">Monitors</h3>
+            </a>
+            <a href="shop.html" class="category-item swiper-slide">
+              <img src="assets/img/airphones-category.jpeg" alt="" class="category-img">
+              <h3 class="category-title">Airphones</h3>
+            </a>
+            <a href="shop.html" class="category-item swiper-slide">
+              <img src="assets/img/smart home-category.jpg" alt="" class="category-img">
+              <h3 class="category-title">Smart Home</h3>
+            </a>
+            <a href="shop.html" class="category-item swiper-slide">
+              <img src="assets/img/gaming-category.jpg" alt="" class="category-img">
+              <h3 class="category-title">Gaming Consoles</h3>
+            </a>
+          </div>
+          <div class="swiper-button-next">
+            <i class="fi fi-rs-angle-right"></i>
+          </div>
+          <div class="swiper-button-prev">
+            <i class="fi fi-rs-angle-left"></i>
+          </div>
+        </div>
+       </section>
+
       <!--=============== PRODUCTS ===============-->
       <section class="products section-lg container">
         <p class="total-products">We found <span>688</span> itons for you</p>
-
         <div class="products-container grid">
           <div class="product-item">
             <div class="product-banner">
@@ -684,5 +741,8 @@
 
     <!--=============== MAIN JS ===============-->
     <script src="assets/js/main.js"></script>
+
+    <!--=============== Product List ===============-->
+    <script src="assets/js/products.js"></script>
   </body>
 </html>
